--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -7,7 +7,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 9999;
     width: 100%;
     background-color: #222;
   }
